# sppu-aids-practicals

./: .gitignore  Readme.md
SEM 3/DSL_Group_A_B/: DSL_5.py  Ques1.py  Ques11.py
SEM 3/DSL_Group_C_D_E/: DSL_19.cpp  DSL_23.cpp  DSL_25.cpp  DSl_29.cpp
SEM 5/AI/: ass-1.py  ass-3.py  ass-4.py  ass-5.py
SEM 5/CN/: ass-1.pkt  ass-11.pkt  ass-15.pkt  ass-16.py  ass-4.pkt  ass-5.py  ass-6.py
SEM 5/DBMS/: ass-1.sql  ass-2.sql  ass-4.js  ass-7.sql
SEM-3/DSL_Group_A_B/: DSL_2.py  Ques14.py  (+3 more)
SEM-6/: practice.ipynb  pyproject.toml  requirements.txt
SEM-6/ANN/: ass-1.ipynb  ass-1.py  ass-10.py  ass-11.py  ass-12.py  ass-13.py  ass-2.ipynb  ass-2.py  ass-3.ipynb  ass-3.py  ass-4.ipynb  ass-4.py  ass-5.ipynb  ass-5.py  ass-6.py  ass-7.py  ass-8.py  ass-9.py  main.py  prac1.py  prac5.py
SEM-6/CS/: ass1.py  ass2.py  ass3.py  ass4.py  ass5.py
SEM-6/DS/: ass-1.ipynb  ass-10.ipynb  ass-2.ipynb  ass-3.ipynb  ass-4.ipynb  ass-5.ipynb  ass-6.ipynb  ass-7.ipynb  ass-8.ipynb  ass-9.ipynb
SEM-6/DS/.ipynb_checkpoints/: ass-1-checkpoint.ipynb
SEM-7/: CL-I.ipynb  CL_II.ipynb  main.py  pyproject.toml
SEM-7/BIF/: 1.ipynb  2.ipynb  4.ipynb
SEM-7/DMV/: 1.ipynb  2.ipynb  3.ipynb  4_RealEstate_price.csv  5.ipynb  6.ipynb  6_Retail_Sales.csv  ASS1.py  ASS2.py  ASS4.ipynb  sales.csv  sales.json  sales.xlsx
SEM-7/IR/: 1.ipynb  2.ipynb  3.ipynb  4.ipynb  5.ipynb  IR ass1.ipynb  IR ass2.ipynb  IR ass3.ipynb  IR ass4.ipynb
SEM-7/ML/: 1-feature-transforation.html  1.ipynb  2.ipynb  3_classification_analysis.ipynb  4.ipynb  5_ensemble_learning.ipynb  6_reinforcement_learning.ipynb
(+179 files in other folders)
